--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <!-- First section -->
+
     <div class="bg-img">
       <header class="header">
         <div class="head-container">
@@ -27,11 +28,20 @@
           <div class="mobile-view">
             <div class="container">
               <div class="ham-btn">
-                <div class="hamline"></div>
-                <div class="hamline"></div>
-                <div class="hamline"></div>
+                <div class="line">
+                  <div class="hamline"><img src="images/Hamburger-Line.png" alt="" /></div>
+                </div>
               </div>
             </div>
+          </div>
+
+          <div class="menu">
+            <ul>
+              <li class="bold"><a href="#">Home</a></li>
+              <li><a href="#">Cart</a></li>
+              <li><a href="#">Checkout</a></li>
+              <li class="bordered"><a href="#"> </a></li>
+            </ul>
           </div>
 
           <div class="next">
