--- a/index.html
+++ b/index.html
@@ -26,22 +26,22 @@
           </div>
 
           <div class="mobile-view">
-            <div class="container">
-              <div class="ham-btn">
-                <div class="line">
-                  <div class="hamline"><img src="images/Hamburger-Line.png" alt="" /></div>
+            <div class="navbar-mob">
+              <div class="container">
+                <div class="ham-btn">
+                  <i class="fas fa-bars icon"></i>
                 </div>
               </div>
             </div>
-          </div>
 
-          <div class="menu">
-            <ul>
-              <li class="bold"><a href="#">Home</a></li>
-              <li><a href="#">Cart</a></li>
-              <li><a href="#">Checkout</a></li>
-              <li class="bordered"><a href="#"> </a></li>
-            </ul>
+            <div class="menu">
+              <ul>
+                <li class="bold"><a href="#">Home</a></li>
+                <li><a href="#">Cart</a></li>
+                <li><a href="#">Checkout</a></li>
+                <li class="bordered"><a href="#"> </a></li>
+              </ul>
+            </div>
           </div>
 
           <div class="next">
@@ -83,17 +83,47 @@
         </ul>
       </div>
 
+      <!-- Mobile View Tabs -->
+      <div class="mobile-view container">
+        <div class="wrapper-all">
+          <div class="tab-bar">
+            <div class="flex">
+              <div class="food-tab">
+                <ul>
+                  <li><a href="/#shawarma">SHAWARMA</a></li>
+                </ul>
+              </div>
+
+              <div class="more-tab">More <i class="fas fa-chevron-down arrow"></i></div>
+            </div>
+          </div>
+
+          <div class="other-tabs">
+            <ul>
+              <li><a href="/#chicken">CHICKEN & FRIES</a></li>
+              <li><a href="/#food">FOOD</a></li>
+              <li><a href="/#snacks">SNACKS</a></li>
+              <li><a href="/#pizza">PIZZA</a></li>
+              <li><a href="/#drinks">DRINKS</a></li>
+              <li><a href="/#ice-cream">ICE-CREAM</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
       <!-- Tabs -->
-      <div class="tab-bar">
-        <ul>
-          <li><a href="/#shawarma">SHAWARMA</a></li>
-          <li><a href="/#chicken">CHICKEN & FRIES</a></li>
-          <li><a href="/#food">FOOD</a></li>
-          <li><a href="/#snacks">SNACKS</a></li>
-          <li><a href="/#pizza">PIZZA</a></li>
-          <li><a href="/#drinks">DRINKS</a></li>
-          <li><a href="/#ice-cream">ICE-CREAM</a></li>
-        </ul>
+      <div class="general-view">
+        <div class="tab-bar">
+          <ul>
+            <li><a href="/#shawarma">SHAWARMA</a></li>
+            <li><a href="/#chicken">CHICKEN & FRIES</a></li>
+            <li><a href="/#food">FOOD</a></li>
+            <li><a href="/#snacks">SNACKS</a></li>
+            <li><a href="/#pizza">PIZZA</a></li>
+            <li><a href="/#drinks">DRINKS</a></li>
+            <li><a href="/#ice-cream">ICE-CREAM</a></li>
+          </ul>
+        </div>
       </div>
     </div>
 
