--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           <div class="navbar">
             <ul>
               <li class="bold"><a href="#">Home</a></li>
-              <li><a href="#">Cart</a></li>
-              <li><a href="#">Checkout</a></li>
+              <li><a href="/cart">Cart</a></li>
+              <li><a href="/checkout">Checkout</a></li>
               <li class="bordered"><a href="#"> </a></li>
             </ul>
           </div>
@@ -39,8 +39,8 @@
             <div class="menu">
               <ul>
                 <li class="bold"><a href="#">Home</a></li>
-                <li><a href="#">Cart</a></li>
-                <li><a href="#">Checkout</a></li>
+                <li><a href="/cart">Cart</a></li>
+                <li><a href="/checkout">Checkout</a></li>
                 <li class="bordered"><a href="#"> </a></li>
               </ul>
             </div>
@@ -64,15 +64,17 @@
           ></a>
 
           <div class="cart-wrapper">
-            <div class="cart">
-              <div class="item-no">
-                <p></p>
-              </div>
+            <a href="/cart">
+              <div class="cart">
+                <div class="item-no">
+                  <p></p>
+                </div>
 
-              <div class="cart-icon">
-                <i class="fas fa-cart-plus"></i>
+                <div class="cart-icon">
+                  <i class="fas fa-cart-plus"></i>
+                </div>
               </div>
-            </div>
+            </a>
           </div>
         </div>
       </header>
@@ -101,9 +103,6 @@
       <div class="item-add">
         <p>1 item has been added to cart</p>
       </div>
-      <div class="goody">
-        <p>keep on ordering! Thanks ...</p>
-      </div>
 
       <div class="item-remove">
         <p>1 item has been removed from cart</p>
@@ -112,7 +111,7 @@
       <div class="open-time">
         <p>Opening time is 10AM</p>
       </div>
-      <div class="sunday-open-time">
+      <div class="sun-open-time">
         <p>Opening time is 2PM</p>
       </div>
       <div class="sunMon-open">
@@ -195,7 +194,9 @@
                   <p></p>
                 </div>
               </div>
-              <div class="icon"><i class="fas fa-plus"></i></div>
+              <div class="icon">
+                <i class="fas fa-plus"></i>
+              </div>
             </div>
           </div>
           <!-- <i class="fas fa-spinner fa-pulse"></i> <i class="fas fa-spinner fa-spin"></i> <i class="fas fa-circle-notch fa-pulse"></i> -->
