--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
               </div>
             </div>
           </div>
-          <!-- <i class="fas fa-spinner fa-pulse"></i> <i class="fas fa-spinner fa-spin"></i> <i class="fas fa-circle-notch fa-pulse"></i> -->
+          <!-- <i class="fas fa-spinner fa-pulse"></i> <i class="fas fa-spinner fa-spin"></i> <i class="fas fa-circle-notch fa-pulse"></i>
+          <i class="fas fa-circle-notch fa-spin"></i> -->
 
           <!-- Card 2 -->
           <div class="card">
